# doclean

./: .gitignore  changelog.md  pyproject.toml  readme.md
.github/workflows/: publish.yml
doc/: publishing.md
src/clean.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/doclean/: cli.py
src/pyclean/: cli.py
src/pyclean.egg-info/: PKG-INFO  SOURCES.txt
tests/: FS_Helper.py  build_pyproject.py  test_find_pyproject.py  test_get_globs.py  test_remove_paths.py  test_to_paths.py  test_validate_paths.py
